--- a/SNN.ipynb
+++ b/SNN.ipynb
@@ -2686,7 +2686,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 136,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2708,7 +2708,7 @@
         {
           "data": {
             "text/html": [
-              "<p style=\"font-size: 50px; color: #66D148\">['Ashe']</p>"
+              "<p style=\"font-size: 50px; color: #66D148\">['Alistar', 'Braum', 'Leona', 'Nautilus', 'Pyke', 'Rakan', 'Rell', 'Taric', 'Thresh']</p>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -2719,23 +2719,21 @@
         }
       ],
       "source": [
-        "gender = 1 #@param {type:\"integer\"} # {'Male': 0, 'Female': 1, 'Other': 2}\n",
-        "is_bottom = 1 #@param {type:\"integer\"}\n",
+        "gender = 0 #@param {type:\"integer\"} # {'Male': 0, 'Female': 1, 'Other': 2}\n",
+        "is_bottom = 0 #@param {type:\"integer\"}\n",
         "is_jungle = 0 #@param {type:\"integer\"}\n",
         "is_middle = 0 #@param {type:\"integer\"}\n",
         "is_support = 1 #@param {type:\"integer\"}\n",
         "is_top = 0 #@param {type:\"integer\"}\n",
-        "is_melee = 0 #@param {type:\"integer\"}\n",
-        "is_ranged = 1 #@param {type:\"integer\"}\n",
+        "is_melee = 1 #@param {type:\"integer\"}\n",
+        "is_ranged = 0 #@param {type:\"integer\"}\n",
         "\n",
         "input_layer = np.array([gender, is_bottom, is_jungle, is_middle, is_support, is_top, is_melee, is_ranged])\n",
         "res = sigmoid(np.dot(input_layer, synaptic_weights))\n",
         "display(res.shape)\n",
         "\n",
-        "thresh = 0.01\n",
+        "thresh = 0.02\n",
         "out = (res >= thresh).astype(int)\n",
-        "\n",
-        "out\n",
         "\n",
         "# Get the names of the champions that match the output\n",
         "champions = dataset.filter(regex='name_').columns\n",
